// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Transform Computation Node can stack values with center offset 1`] = `
Array [
  Array [
    Object {
      "c": 0,
      "x": 0,
      "y": 28,
      "y2": -14,
      "y3": 14,
    },
    Object {
      "c": 1,
      "x": 0,
      "y": 55,
      "y2": 14,
      "y3": 69,
    },
    Object {
      "c": 0,
      "x": 1,
      "y": 43,
      "y2": -21.5,
      "y3": 21.5,
    },
    Object {
      "c": 1,
      "x": 1,
      "y": 91,
      "y2": 21.5,
      "y3": 112.5,
    },
    Object {
      "c": 0,
      "x": 2,
      "y": 81,
      "y2": -26.5,
      "y3": 54.5,
    },
    Object {
      "c": 1,
      "x": 2,
      "y": 53,
      "y2": 54.5,
      "y3": 107.5,
    },
    Object {
      "c": 0,
      "x": 3,
      "y": 19,
      "y2": -9.5,
      "y3": 9.5,
    },
    Object {
      "c": 1,
      "x": 3,
      "y": 87,
      "y2": 9.5,
      "y3": 96.5,
    },
    Object {
      "c": 0,
      "x": 4,
      "y": 52,
      "y2": -24,
      "y3": 28,
    },
    Object {
      "c": 1,
      "x": 4,
      "y": 48,
      "y2": 28,
      "y3": 76,
    },
    Object {
      "c": 0,
      "x": 5,
      "y": 24,
      "y2": -12,
      "y3": 12,
    },
    Object {
      "c": 1,
      "x": 5,
      "y": 49,
      "y2": 12,
      "y3": 61,
    },
    Object {
      "c": 0,
      "x": 6,
      "y": 87,
      "y2": -33,
      "y3": 54,
    },
    Object {
      "c": 1,
      "x": 6,
      "y": 66,
      "y2": 54,
      "y3": 120,
    },
    Object {
      "c": 0,
      "x": 7,
      "y": 17,
      "y2": -8.5,
      "y3": 8.5,
    },
    Object {
      "c": 1,
      "x": 7,
      "y": 27,
      "y2": 8.5,
      "y3": 35.5,
    },
    Object {
      "c": 0,
      "x": 8,
      "y": 68,
      "y2": -8,
      "y3": 60,
    },
    Object {
      "c": 1,
      "x": 8,
      "y": 16,
      "y2": 60,
      "y3": 76,
    },
    Object {
      "c": 0,
      "x": 9,
      "y": 49,
      "y2": -7.5,
      "y3": 41.5,
    },
    Object {
      "c": 1,
      "x": 9,
      "y": 15,
      "y2": 41.5,
      "y3": 56.5,
    },
  ],
]
`;

exports[`Stack Transform Computation Node can stack values with normalize offset 1`] = `
Array [
  Array [
    Object {
      "c": 0,
      "x": 0,
      "y": 28,
      "y0": 0,
      "y1": 0.3373493975903615,
    },
    Object {
      "c": 1,
      "x": 0,
      "y": 55,
      "y0": 0.3373493975903615,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 1,
      "y": 43,
      "y0": 0,
      "y1": 0.3208955223880597,
    },
    Object {
      "c": 1,
      "x": 1,
      "y": 91,
      "y0": 0.3208955223880597,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 2,
      "y": 81,
      "y0": 0,
      "y1": 0.6044776119402985,
    },
    Object {
      "c": 1,
      "x": 2,
      "y": 53,
      "y0": 0.6044776119402985,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 3,
      "y": 19,
      "y0": 0,
      "y1": 0.1792452830188679,
    },
    Object {
      "c": 1,
      "x": 3,
      "y": 87,
      "y0": 0.1792452830188679,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 4,
      "y": 52,
      "y0": 0,
      "y1": 0.52,
    },
    Object {
      "c": 1,
      "x": 4,
      "y": 48,
      "y0": 0.52,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 5,
      "y": 24,
      "y0": 0,
      "y1": 0.3287671232876712,
    },
    Object {
      "c": 1,
      "x": 5,
      "y": 49,
      "y0": 0.3287671232876712,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 6,
      "y": 87,
      "y0": 0,
      "y1": 0.5686274509803921,
    },
    Object {
      "c": 1,
      "x": 6,
      "y": 66,
      "y0": 0.5686274509803921,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 7,
      "y": 17,
      "y0": 0,
      "y1": 0.38636363636363635,
    },
    Object {
      "c": 1,
      "x": 7,
      "y": 27,
      "y0": 0.38636363636363635,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 8,
      "y": 68,
      "y0": 0,
      "y1": 0.8095238095238095,
    },
    Object {
      "c": 1,
      "x": 8,
      "y": 16,
      "y0": 0.8095238095238095,
      "y1": 1,
    },
    Object {
      "c": 0,
      "x": 9,
      "y": 49,
      "y0": 0,
      "y1": 0.765625,
    },
    Object {
      "c": 1,
      "x": 9,
      "y": 15,
      "y0": 0.765625,
      "y1": 1,
    },
  ],
]
`;
